fix pytest coverage workflow

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -1,37 +1,29 @@
 name: pytest-coverage
+
 on:
   pull_request:
 
 permissions:
   contents: read
-  pull-requests: write
 
 jobs:
-  test-cov:
+  test:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
 
-      - name: Install deps
+      - name: Install dependencies
         run: uv sync
 
       - name: Run tests with coverage
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)/src
-          uv run pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=src tests/ | tee pytest-coverage.txt
-
-      - name: Pytest coverage comment
-        uses: MishaKav/pytest-coverage-comment@main
-        with:
-          pytest-coverage-path: ./pytest-coverage.txt
-          junitxml-path: ./pytest.xml
-
-      - name: Fail if coverage too low
-        if: ${{ steps.coverage.outputs.coverage < '70' }}
-        run: |
-          echo "Coverage below 70%! Failing the workflow."
-          exit 1
-
+          uv run pytest \
+            --cov=src \
+            --cov-report=term-missing:skip-covered \
+            --cov-fail-under=70 \
+            tests/
