--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,19 @@ include = ["src/contriboo/py.typed"]
 
 [dependency-groups]
 dev = [
-    "bandit>=1.9.3",
- "mypy>=1.19.1",
- "pip-audit>=2.10.0",
- "pytest>=9.0.2",
- "pytest-cov>=7.0.0",
+  "bandit>=1.9.3",
+  "mypy>=1.19.1",
+  "pip-audit>=2.10.0",
+  "pytest>=9.0.2",
+  "pytest-cov>=7.0.0",
 ]
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = ["D203", "D212", "COM812", "PLR0913"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*.py" = ["S101", "D", "INP001", "ARG001", "ARG002"]
