update workflows: running without make

--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -17,5 +17,4 @@ jobs:
         run: uv sync
 
       - name: Run mypy
-        run: make types
-
+        run: uv run mypy --strict --disallow-untyped-defs --disallow-incomplete-defs src tests
