--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,14 @@ include = ["src/contriboo/py.typed"]
 
 [dependency-groups]
 dev = [
-    "bandit>=1.9.3",
- "mypy>=1.19.1",
- "pip-audit>=2.10.0",
- "pytest>=9.0.2",
- "pytest-cov>=7.0.0",
+  "bandit>=1.9.3",
+  "pip-audit>=2.10.0",
+  "mypy>=1.19.1",
+  "pre-commit>=4.5.1",
+  "pytest>=9.0.2",
+  "pytest-cov>=7.0.0",
+  "pytest-asyncio>=1.3.0",
+  "ruff>=0.15.2",
 ]
 
 [tool.mypy]
