refactor CI and Makefile

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -20,10 +20,4 @@ jobs:
         run: uv sync
 
       - name: Run tests with coverage
-        run: |
-          export PYTHONPATH=$PYTHONPATH:$(pwd)/src
-          uv run pytest \
-            --cov=src \
-            --cov-report=term-missing:skip-covered \
-            --cov-fail-under=70 \
-            tests/
+        run: make test-cov
